Fixes z-index issue with dropdown on search page.

--- a/src/pages/IndexPage/IndexPage.scss
+++ b/src/pages/IndexPage/IndexPage.scss
@@ -8,6 +8,11 @@ body {
     width: 20%;
 }
 
+#welcome {
+    font-size: 4em;
+    margin-bottom: 10vmin;
+}
+
 #index-header-container {
     display: flex;
     align-items: center;
@@ -64,3 +69,4 @@ body {
 .logo-container {
     margin-top: 5vmin;
 }
+
